Fixed bugs in comment not showing all users

--- a/src/pages/Account.css
+++ b/src/pages/Account.css
@@ -12,10 +12,11 @@
 }
 
 .account-setting-container {
-  width: 50%;
+  width: 40%;
   color: black;
   background-color: white;
   border-top: 4px solid #e1ad01;
   border-bottom: 4px solid #e1ad01;
   padding: 12px;
+  margin-top: 2rem;
 }
